force-app/main/default/objects/Opportunity/fields/SubExpertise__c.field-meta.xml
<CustomField>
    <fullName>SubExpertise__c</fullName>
    <label>Sub Expertise</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SubExpertise</valueSetName>
    </valueSet>
</CustomField>