force-app/main/default/objects/Opportunity/fields/SupportRequired__c.field-meta.xml
<CustomField>
    <fullName>SupportRequired__c</fullName>
    <label>SupportRequired</label>
    <length>255</length>
    <type>Text</type>
</CustomField>