force-app/main/default/objects/Opportunity/fields/SuppressEmail__c.field-meta.xml
<CustomField>
    <fullName>SuppressEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suppress Email</label>
    <type>Checkbox</type>
</CustomField>