force-app/main/default/objects/Opportunity/fields/Suspended__c.field-meta.xml
<CustomField>
    <fullName>Suspended__c</fullName>
    <label>Suspended</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>