force-app/main/default/objects/Opportunity/fields/TentativeFee__c.field-meta.xml
<CustomField>
    <fullName>TentativeFee__c</fullName>
    <label>Initial Tentative Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>