force-app/main/default/objects/Opportunity/fields/Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Conditions__c</fullName>
    <label>Terms and Conditions</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>