force-app/main/default/objects/Opportunity/fields/Timeline__c.field-meta.xml
<CustomField>
    <fullName>Timeline__c</fullName>
    <label>Timeline</label>
    <type>Date</type>
</CustomField>