force-app/main/default/objects/Opportunity/fields/Timelines__c.field-meta.xml
<CustomField>
    <fullName>Timelines__c</fullName>
    <label>Timelines</label>
    <length>255</length>
    <type>Text</type>
</CustomField>