force-app/main/default/objects/Opportunity/fields/TotalIncome__c.field-meta.xml
<CustomField>
    <fullName>TotalIncome__c</fullName>
    <label>Total Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>