force-app/main/default/objects/Opportunity/fields/ValidateBenefitsValueDate__c.field-meta.xml
<CustomField>
    <fullName>ValidateBenefitsValueDate__c</fullName>
    <label>Validate Benefits &amp; Value Date</label>
    <type>Date</type>
</CustomField>