force-app/main/default/objects/Opportunity/fields/WCGT_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>WCGT_Job_ID__c</fullName>
    <externalId>true</externalId>
    <label>WCGT Job ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>