force-app/main/default/objects/Opportunity/fields/WCGTId__c.field-meta.xml
<CustomField>
    <fullName>WCGTId__c</fullName>
    <inlineHelpText>WCGT Id of the Enquiry</inlineHelpText>
    <label>WCGT Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>