force-app/main/default/objects/Opportunity/fields/WonExpectedRecovery__c.field-meta.xml
<CustomField>
    <fullName>WonExpectedRecovery__c</fullName>
    <label>Won Expected Recovery %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>