force-app/main/default/objects/Opportunity/fields/WonReasonComments__c.field-meta.xml
<CustomField>
    <fullName>WonReasonComments__c</fullName>
    <label>Won Reason Comments</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>