force-app/main/default/objects/Opportunity/validationRules/Conflict_Check_Not_Passed.validationRule-meta.xml
<ValidationRule>
    <fullName>Conflict_Check_Not_Passed</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISPICKVAL( ConflictCheck__c , &apos;Pass&apos;)) ,
 ISPICKVAL( StageName , &apos;Closed Won&apos;),
 ISCHANGED( StageName ))</errorConditionFormula>
    <errorMessage>Enquiry will not marked as Closed Won unless the Conflict Check Status marked as &quot;Approved&quot;</errorMessage>
</ValidationRule>