force-app/main/default/objects/Opportunity/validationRules/Finding_Partner_Less_Than_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Finding_Partner_Less_Than_2</fullName>
    <active>true</active>
    <errorConditionFormula>AND(CountTeam__c &lt;2,  NOT(ISPICKVAL( StageName , &apos;Identify/Create Enquiry&apos;)),NOT( ByPassValidation__c ))</errorConditionFormula>
    <errorMessage>Please add minimum 2 finding Partners to proceed in Enquiry Process</errorMessage>
</ValidationRule>