force-app/main/default/objects/Opportunity/validationRules/Remarks_when_Opportunity_Closed_or_Win.validationRule-meta.xml
<ValidationRule>
    <fullName>Remarks_when_Opportunity_Closed_or_Win</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 		LEN( RemarksWinProb__c ) =0,
			OR(ISPICKVAL(StageName,&apos;Closed Won&apos;),
   ISPICKVAL(StageName,&apos;Closed Lost&apos;)),NOT( ByPassValidation__c )
)</errorConditionFormula>
    <errorMessage>Please fill remarks</errorMessage>
</ValidationRule>