force-app/main/default/objects/Opportunity/validationRules/Tentative_Fee_not_be_able_to_change_it.validationRule-meta.xml
<ValidationRule>
    <fullName>Tentative_Fee_not_be_able_to_change_it</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(PRIORVALUE(  TentativeFee__c  ))), ISCHANGED(  TentativeFee__c  ))</errorConditionFormula>
    <errorMessage>Tentative Fee will not be changed , Once it will be inserted</errorMessage>
</ValidationRule>