force-app/main/default/objects/Opportunity/validationRules/Validation_On_IdentifyCreate_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_On_IdentifyCreate_Opportunity</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(  REL_BUL_Approval_Status__c , &apos;Pending&apos;),
  NOT(ISPICKVAL( StageName , &apos;Identify/Create Enquiry&apos;)),
 ISCHANGED( StageName ),NOT( ByPassValidation__c ))</errorConditionFormula>
    <errorMessage>RCC approval already submitted to REL/BUL, Stage will not move further until revert from REL/BUL.</errorMessage>
</ValidationRule>