force-app/main/default/objects/Opportunity/listViews/All_Enquiries.listView-meta.xml
<ListView>
    <fullName>All_Enquiries</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>IntegratedEnquiry__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>OPPORTUNITY_SCORE</columns>
    <columns>GT_Prediction_Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Enquiries</label>
</ListView>