force-app/main/default/objects/Opportunity/listViews/Lost_Enquiries.listView-meta.xml
<ListView>
    <fullName>Lost_Enquiries</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>IntegratedEnquiry__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>OPPORTUNITY_SCORE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Closed Lost</value>
    </filters>
    <label>Lost Enquiries</label>
</ListView>