force-app/main/default/objects/Opportunity/listViews/Pending_with_Independence_team.listView-meta.xml
<ListView>
    <fullName>Pending_with_Independence_team</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Assigned_to_DS_Team_Member__c</columns>
    <columns>Assignment_Date__c</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY_SCORE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RCCCurrentStatus__c</field>
        <operation>equals</operation>
        <value>Not Initiated</value>
    </filters>
    <label>Pending with Independence team</label>
</ListView>