force-app/main/default/objects/Opportunity/listViews/RCC_Not_Passed.listView-meta.xml
<ListView>
    <fullName>RCC_Not_Passed</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>IntegratedEnquiry__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RCCCurrentStatus__c</field>
        <operation>notEqual</operation>
        <value>Pass</value>
    </filters>
    <label>RCC Not Passed</label>
</ListView>