force-app/main/default/objects/Opportunity/listViews/Today_s_Created.listView-meta.xml
<ListView>
    <fullName>Today_s_Created</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>IntegratedEnquiry__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>OPPORTUNITY_SCORE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Created</label>
</ListView>